New in version 0.6.5:
	* AI states now controlled by the GOAP planner.
	* Optimized ALife logic
		* Dogs now follow the pack leader and spawn in larger amounts.
		* ALife no longer think as much during non-combat tasks.
		* Several movement functions optimized to prevent stalling.
	* Enhanced groups
		* Groups will now gather resources and engage in combat with other groups.
	* The player and ALife can now "hear" noises (firearms, explosions, etc.)
		* Note: Actual sounds are planned for a future version.
	* Reworked judgement.
		* NPCs won't talk as much and judge based on a wider variety of factors.
	* Completely rewrote all dialog-related functions.
		* An extended version of RawScript is now supported.
		* All dialog strings are stored externally in `data\text\dialog.txt`.
		* Questions have been reimplemented.
	* Faster, more detailed world generation.
	* Rewrote damage model.
		* The size and material of an item now play a role in damage calculations.
	* Groups are no longer tracked by the world.
		* Instead, individuals track their interpretations of what the group is.
	* NPCs can now learn more details about others and items.
		* This information can also become out of date, leading to bad decision making.
	* Mouse look
		* The mouse can now be used to select items in look mode (`l`).
	* Huge FPS boost on all systems.
	* Many new items.
	* NPCs now make sure their LOS is clear before opening fire.
	* Weapons now have multiple firing modes (using `f`).
	* Group leaders can now issue attack orders (hit `tab`)
	* Added movie mode (recording) (hit `?` to start, again to quit.)
	* ALife take more factors into consideration when deciding if they are safe.
	* Worlds are initially seeded with one group of a random motive.
	* Added Night Terrors.
	* Revamped recoil.
		* Recoil now depends on the type of ammo used.
	* Added the MP5, a mid-range submachine gun. Takes 9x19mm ammo.
	* Fast-forward is no longer enabled when the player performs an action.