@@ -32,6 +32,10 @@ TIER: URGENT
 DESIRE: !HAS_THREATS,-!HAS_USABLE_WEAPON,-DANGER_CLOSE
 TIER: COMBAT
 
+[GOAL_KILL_THREAT_FROM_COVER]
+DESIRE: !HAS_THREATS,-!HAS_USABLE_WEAPON,-!DANGER_CLOSE
+TIER: COMBAT
+
 [GOAL_SEARCH_FOR_TARGET]
 DESIRE: !HAS_LOST_THREAT,-!WEAPON_EQUIPPED_AND_READY
 TIER: TACTIC
@@ -51,10 +55,6 @@ TIER: TACTIC
 [GOAL_COVER]
 DESIRE: !DANGER_CLOSE,-HAS_USABLE_WEAPON
 TIER: TACTIC
-
-[GOAL_SHOOT_FROM_COVER]
-DESIRE: !HAS_THREATS,-!HAS_USABLE_WEAPON,-!DANGER_CLOSE
-TIER: COMBAT
 
 #Actions
 
