@@ -1,8 +1,9 @@
 New in version 0.6.5:
 	* AI states now controlled by the GOAP planner.
+	* Entirely new ALife behaviors.
 	* Optimized ALife logic
 		* Dogs now follow the pack leader and spawn in larger amounts.
-		* ALife no longer think as much during non-combat tasks.
+		* ALife now go into a "semi-offline" mode once outside the range of the player.
 		* Several movement functions optimized to prevent stalling.
 	* Enhanced groups
 		* Groups will now gather resources and engage in combat with other groups.
@@ -23,6 +24,7 @@ New in version 0.6.5:
 		* This information can also become out of date, leading to bad decision making.
 	* Mouse look
 		* The mouse can now be used to select items in look mode (`l`).
+	* Looting of NPCs can be done by standing next to them and pressing `o`.
 	* Huge FPS boost on all systems.
 	* Many new items.
 	* NPCs now make sure their LOS is clear before opening fire.
@@ -40,7 +42,6 @@ New in version 0.6.5:
 		* This is untested on longer playthroughs.
 	* Updated map generation.
 		* Maps can now be as large as 600x600 and contain multiple larger towns/cities.
-	* Experimental optimizations in ALife think rate.
 	* Slicing/zoning-related speed-ups.
 	* New map format that no longer eats memory.
 	* Added weather (only visual effects for now.)
